Revision history for DBIx::Class

    * Fixes
        - Another relatively invasive set of ::FilterColumn changes, covering
          potential data loss (RT#111567). Please run your regression tests!
        - Fix use of ::Schema::Versioned combined with a user-supplied
          $dbh->{HandleError} (GH#101)
        - Fix parsing of DSNs containing driver arguments (GH#99)
        - Fix spurious warning on MSSQL cursor invalidation retries (RT#102166)
        - Remove spurious exception warping in ::Replicated::execute_reliably
          (RT#113339)
        - Work around unreliable $sth->finish() on INSERT ... RETURNING within
          DBD::Firebird on some compiler/driver combinations (RT#110979)
        - Fix leaktest failures with upcoming version of Sub::Quote

0.082821 2016-02-11 17:58 (UTC)
    * Fixes
        - Fix t/52leaks.t failures on compilerless systems (RT#104429)
        - Fix t/storage/quote_names.t failures on systems with specified Oracle
          test credentials while missing the optional Math::Base36
        - Fix test failures when DBICTEST_SYBASE_DSN is set (unnoticed change
          in error message wording during 0.082800 and a bogus test)
        - Remove largely obsolete test of SQLite view deployment (RT#111916)

    * Misc
        - Work around rare test deadlock under heavy parallelism (RT#108390)

0.082820 2015-03-20 20:35 (UTC)
    * Fixes
        - Protect destructors from rare but possible double execution, and
          loudly warn the user whenever the problem is encountered (GH#63)
        - Relax the 'self_result_object' argument check in the relationship
          resolution codepath, restoring exotic uses of inflate_result
          http://lists.scsys.co.uk/pipermail/dbix-class/2015-January/011876.html
        - Fix updating multiple CLOB/BLOB columns on Oracle
        - Fix exception on complex update/delete under a replicated setup
          http://lists.scsys.co.uk/pipermail/dbix-class/2015-January/011903.html